# csa-py

./: .gitignore  Justfile  README.md  README.qmd  pyproject.toml
scripts/: large_data_estimation.py  sim_test.py
scripts/benchmark/: bench_did.sh  bmarkfastdid.py  bmarkfull.R  bmarkfull.py  fastdidbenchcomp.R  plot_fastdid.R  sim_fastdid_data.R
scripts/comparison/: fastdid_dr_ub.R  fastdid_res.R  fastdid_res.py
scripts/data/: drdid_rc.R  export_data.R  mboot.R  oreg_mpdta.R  oreg_ub.R  oreg_xvars.R  panel_test.R
scripts/profile/: prof.sh  prof_csa.py
src/csa/: __init__.py  bench.py  csa_.py  drdid.py  logreg.py  multiplier.py  sim.py  testing.py  utils.py
tests/: test_csa.py  test_drdid.py  test_multiplier.py
