[project]
name = "csa"
version = "0.1.0"
description = "partial implementation of the Callaway-Sant'Anna (CSA) estimator"
readme = "README.md"
authors = [
    { name = "jsr-p", email = "jsr-p@sodas.ku.dk" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "fastlr>=0.1.0",
    "numpy>=2.1.3",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    # scipy bug https://github.com/statsmodels/statsmodels/issues/9542
    "scipy<=1.15.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]


[project.scripts]
didtools = "csa:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pdbpp>=0.11.6",
    "statsmodels>=0.14.4",
    "plotnine>=0.14.5",
    "pytest>=8.3.4",
    "line-profiler>=4.2.0",
    "memory-profiler>=0.61.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "jupyter>=1.1.1",
]

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"
